# firefly-api

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build-debug.sh  build_project.sh  docker-compose.yml  init.sql  make-debug.sh  pom.xml  start-server.sh
.circleci/: config.yml  configuration.yml
.github/: issue_template.md
config/: .gitignore  dev-docker.toml
database/: init.sql  test.sql  test_SAVE.sql
database/firefly_extension/: Makefile  firefly--0.0.1.sql  firefly.control
database/firefly_extension/results/: test_COLLECT.out  test_SAVE.out
database/firefly_extension/test/: setup.sql  teardown.sql
docs/: .gitignore  Gemfile  Readme.md  _config.yml  index.md
docs/_data/: firefly_api.yml
docs/_layouts/: swagger.html
docs/_posts/: 2017-11-18-welcome-to-jekyll.markdown
docs/_sass/: _swagger.scss
docs/_site/: 404.html  feed.xml  index.html
docs/_site/css/: main.css  test.css
docs/assets/css/: style.scss
docs/css/: main.scss
docs/docs/: index.html
docs/docs/models/: FullTask.html  Inline_response_200.html  Operation.html  Task.html
docs/docs/operations/: DefaultApi.html
docs/images/: Thumbs.db
docs/specs/: firefly_api.yml
firefly/: CMakeLists.txt
firefly/include/firefly/api/: IModuleHandler.hpp  MainHandler.hpp
firefly/src/: main.cpp
firefly/src/api/: MainHandler.cpp
firefly_core/: CMakeLists.txt
firefly_core/include/firefly/core/api/: IModuleHandler.hpp
firefly_core/include/firefly/core/config/: DataCommonStore.hpp
firefly_core/include/firefly/core/data/: Module.hpp  Operation.hpp  OperationElement.hpp  OperationType.hpp  Processing.hpp  ProcessingAction.hpp  ProcessingType.hpp  Task.hpp  TaskBuilder.hpp
firefly_core/include/firefly/core/exception/: FireflyException.hpp
firefly_core/include/firefly/core/model/: DatabaseManager.hpp  OperationModel.hpp  PGResultInterpreter.hpp  Point3DInterpreter.hpp  Point3DModel.hpp  TaskInterpreter.hpp  TaskModel.hpp  exceptions.hpp
firefly_core/include/firefly/core/model/beans/: Point3DBean.hpp
firefly_core/include/firefly/core/model/interpreters/: OperationInterpreter.hpp  PGResultInterpreter.hpp  Point3DInterpreter.hpp  TaskInterpreter.hpp
firefly_core/include/firefly/core/saving/: OperationSaver.h
firefly_core/include/firefly/core/server/: ResponseBuilder.hpp  Server.hpp
firefly_core/include/firefly/core/utils/: ConcurrentOperationQueue.hpp  FireflyException.hpp  HtmlStatusCode.hpp  Operation.hpp  Process.hpp  ProcessAction.hpp  ResponseBuilder.hpp  ThreadPool.hpp  server_types_definitions.hpp
firefly_core/src/config/: DataCommonStore.cpp
firefly_core/src/data/: Module.cpp  Processing.cpp  ProcessingAction.cpp  ProcessingType.cpp  ProcessingTypeJson.cpp  ResponseBuilder.cpp  Task.cpp  TaskBuilder.cpp
firefly_core/src/model/: DatabaseManager.cpp  OperationModel.cpp  PGResultInterpreter.cpp  Point3DInterpreter.cpp  Point3DModel.cpp  TaskInterpreter.cpp  TaskModel.cpp
firefly_core/src/model/beans/: Point3DBean.cpp
firefly_core/src/model/interpreters/: OperationInterpreter.cpp  PGResultInterpreter.cpp  Point3DInterpreter.cpp  TaskInterpreter.cpp
firefly_core/src/saving/: OperationSaver.cpp
firefly_core/src/server/: ResponseBuilder.cpp  Server.cpp
firefly_core/src/utils/: Process.cpp  ResponseBuilder.cpp
firefly_core/test/: CMakeLists.txt  OperationSaver.cpp.cpp  main_test.cpp
firefly_launcher/: CMakeLists.txt
firefly_launcher/include/firefly/api/: MainHandler.hpp
firefly_launcher/include/firefly/config/: DatabaseConfig.hpp  ServerConfig.hpp
firefly_launcher/include/firefly/server/: ResponseBuilder.hpp  Server.hpp
firefly_launcher/src/: main.cpp
firefly_launcher/src/api/: MainHandler.cpp
firefly_launcher/src/server/: ResponseBuilder.cpp  Server.cpp
firefly_modules/: CMakeLists.txt
firefly_modules/fly/: CMakeLists.txt
firefly_modules/fly/include/fly_module/api/: FlyHandler.hpp
firefly_modules/fly/include/fly_module/data/: FlyModule.hpp
firefly_modules/fly/include/fly_module/model/: Cloud3DModel.hpp  Point3DInterpreter.hpp  Point3DModel.hpp
firefly_modules/fly/include/fly_module/model/beans/: Cloud3DBean.hpp  Point3DBean.hpp
firefly_modules/fly/include/fly_module/workers/: CloudContainerImpl.hpp  FlyCloudPopulation.hpp
firefly_modules/fly/src/api/: FlyHandler.cpp
firefly_modules/fly/src/data/: FlyModule.cpp
firefly_modules/fly/src/model/: Cloud3DModel.cpp  Point3DInterpreter.cpp  Point3DModel.cpp
firefly_modules/fly/src/model/beans/: Cloud3DBean.cpp  Point3DBean.cpp
firefly_modules/fly/src/workers/: CloudContainerImpl.cpp  FlyCloudPopulation.cpp
firefly_modules/fly/test/: CMakeLists.txt  SimpleTest.cpp  main_test.cpp
firefly_modules/opencv/api/: OpencvFilterHandler.cpp  OpencvFilterHandler.hpp
include/: CloudTransmitter.h
include/firefly/: Operation.hpp  controller.hpp  ff_exception.hpp  operation.hpp  safe_queue.hpp  thread_pool.hpp
include/firefly/api/: IModuleHandler.hpp  MainHandler.hpp
include/firefly/model/: Cloud3DModel.hpp  DatabaseManager.hpp  Point3DModel.hpp  exceptions.hpp  fcloudpopulation_beans.hpp  fcloudpopulation_model.hpp
include/fly_extent/: concurrent_cloud.hpp
include/request_handler/: connection.hpp  reply.hpp  request_handler.hpp  resource.h  server.hpp
lib/: CMakeLists.txt
lib/Simple-Web-Server-MODIFIED/: CMakeLists.txt
lib/Simple-Web-Server-MODIFIED/include/simple_web_server/: server_http.hpp
lib/nlohmann-json-2.1.1/: CMakeLists.txt
lib/nlohmann-json-2.1.1/include/json/: json.hpp
resources/: CMakeLists.txt  index.html  inline.bundle.js.map  main.bundle.js  main.bundle.js.map  vendor.bundle.js
resources/e2e/: app.e2e-spec.js  app.e2e-spec.js.map  app.po.js  app.po.js.map
resources/src/: main.js  main.js.map  polyfills.js  polyfills.js.map  test.js.map
resources/web/: index.html
src/: CloudTransmitter.cpp  main.cpp
src/firefly/: controller.cpp
src/fly_extent/: concurrent_cloud.cpp
src/request_handler/: connection.cpp  connection_manager.cpp  mime_types.cpp  reply.cpp  request_handler.cpp  request_parser.cpp  server.cpp
(+101 files in other folders)
